
cmake_minimum_required(VERSION 3.20.2)

project(prometheusTest)

# add_subdirectory(prometheus-cpp)

# target_include_directories(${PROJECT_NAME}
# PUBLIC prometheus-cpp/core/include/prometheus
# PUBLIC prometheus-cpp/pull/include/prometheus
# PUBLIC prometheus-cpp/push/include/prometheus
# )

# target_link_directories(${PROJECT_NAME}
# PRIVATE prometheus-cpp/core/src
# PRIVATE prometheus-cpp/pull/src
# PRIVATE prometheus-cpp/push/src
# )